--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Louva Deus</title>
+        <title>Móveis customizados</title>
         
 
 <link rel="stylesheet" href="style.css">
